--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "leaflet": "^1.9.4",
     "luxon": "^3.4.4",
     "polyline": "^0.2.0",
+    "qs": "^6.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
@@ -26,6 +27,7 @@
     "react-leaflet-cluster": "^2.1.0",
     "react-leaflet-custom-control": "^1.4.0",
     "react-modal-sheet": "^3.1.0",
+    "react-share": "^5.1.0",
     "react-slick": "^0.30.2",
     "redux": "^4.2.1",
     "slick-carousel": "^1.8.1"
@@ -33,6 +35,7 @@
   "devDependencies": {
     "@types/leaflet": "^1.9.12",
     "@types/luxon": "^3.4.2",
+    "@types/qs": "^6.9.15",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
